reactapp: styled filtering table adjusted all games alignment fixed a bug where all games would overflow

--- a/neuro_arcade/reactapp/src/styles/App.module.css
+++ b/neuro_arcade/reactapp/src/styles/App.module.css
@@ -37,9 +37,14 @@
     }
     #AllGames {
         width: 70em;
+        padding: 2em 0;
     }
     .Side {
         width: 32.5em;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-wrap: wrap;
     }
     .GraphBlock {
         width: 100%;
